# PartField_Sketch_simpleMLP

./: .cursorignore  .gitignore  partfield_inference.py  yy_mask_gt_field_mlp.py  yy_partfield_inference.py
Data0/logs/: Uploaded_1_arrow-sketch_camera.txt
Partfield/: yy_mask_gt_field_mlp_inference.py  yy_mlp.py  yy_partfield_inference.py
Partfield/lightning_logs/version_0/: events.out.tfevents.1752554025.I2224cddca101101edf.1295.0
Partfield/lightning_logs/version_1/: events.out.tfevents.1752554102.I2224cddca101101edf.1761.0  hparams.yaml
Partfield/lightning_logs/version_10/: hparams.yaml
Partfield/lightning_logs/version_11/: hparams.yaml
Partfield/lightning_logs/version_12/: hparams.yaml
Partfield/lightning_logs/version_13/: hparams.yaml
Partfield/lightning_logs/version_14/: hparams.yaml
Partfield/partfield/: dataloader.py  model_trainer_pvcnn_only_demo.py  utils.py
TEMP/: .gitignore
TEMP/samesh/: .gitmodules  pyproject.toml
Z_Ori_Dataset/: 1_keep_want_data_id.py  2_cleanup_model_folders.py  7_shell_mesh_gt.py  model_ids.txt  readme.md
Z_Ori_Dataset/scripts/: arrow_creation_by_id.txt  arrow_creation_report.txt  convert_urdf_joints.py  yy_arrow_creation_and_merge_urdf.py
data/: check_align.py  feature_rm.py  find_yy_visulzation.py  urdf_file_process.py  yy_angle_adjust.py
data_small/: rm_vis_and_add.py
data_small_train/: 1_NOTE.md  2_loader.md  3_model.md  copy_training_data.py  loader.py  model.py  test_model.py  training.py
javascript/: .cursorignore  README.md  package-lock.json  package.json
javascript/example/: index.html  styles.css
javascript/scripts/: arrow_creation_by_id.txt  arrow_creation_report.txt  clear_yy_object.py  convert_urdf_joints.py  delete_failure.py  fix_greenred_yy_object.py  fix_obj.py  is_the_id_correct.py  rm_vis_and_add.py  scan_urdf.py  yy_arrow_creation_and_merge_urdf.py
javascript/src/: URDFClasses.js  URDFDragControls.js  URDFLoader.js  urdf-manipulator-element.js  urdf-viewer-element.js
javascript/umd/: URDFLoader.js  URDFLoader.js.map  urdf-manipulator-element.js  urdf-manipulator-element.js.map  urdf-viewer-element.js  urdf-viewer-element.js.map
lightning_logs/version_0/: events.out.tfevents.1752474185.I221144a10001d01e1b.13357.0  events.out.tfevents.1752480009.I2224cddca101101edf.6169.0  hparams.yaml
partfield/: yy_mask_gt_field_mlp.py  yy_partfield_inference.py
partfield/Partfield/: dataloader.py  model_trainer_pvcnn_only_demo.py
samesh/: .cursorignore  README.md  projection.py  pyproject.toml
samesh/samesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samesh/samesh/models/: sam_mesh.py
samesh/samesh/renderer/: renderer.py
samesh/samesh/utils/: cameras.py
samesh/src/samesh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
samesh/src/samesh/models/: sam.py  sam_mesh.py  shape_diameter_function.py
samesh/thridparty/: .gitignore  yy_find_data.py
samesh/thridparty/configs/final/: demo.yaml
samesh/thridparty/partfield/: dataloader.py  model_trainer_pvcnn_only_demo.py
samesh_modi/: projection.py
samesh_modi/configs/: mesh_segmentation.yaml
segmentation/: loader.py  network.py  seg_demo.py  test_segmentation.py  train_segmentation.py
segmentation2/: all_confidence.py  loader.py  network.py  rm_unwant.py  test_segmentation.py  train_segmenation.py
segmentation2/outputs_sketch2seg/: train_log_20250721_223006.txt  train_log_20250721_223032.txt  train_log_20250721_223051.txt  train_log_20250721_223110.txt
virtual_scanner/: batch_process.py  yy_batch_process_combine.py  yy_batch_process_simplification.py  yy_copy_data.py  yy_keep_structure.py  yy_simple_mesh.py
virtual_scanner/cpp/libvirtualscanner/: CMakeLists.txt
virtual_scanner/cpp/libvirtualscanner/cmake/: FindCGAL.cmake
virtual_scanner/ocnn.virtualscanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
virtual_scanner_modi/: CMakeLists.txt  README.md  README_CN.md  build.sh  target.md  test.sh  yy_batch_process_withid.py  yy_keep_structure.py
virtual_scanner_modi/cpp/libvirtualscanner/: CMakeLists.txt
virtual_scanner_modi/cpp/libvirtualscanner/include/virtual_scanner/: points.h  virtual_scanner.h
virtual_scanner_modi/cpp/libvirtualscanner/src/: points.cpp  virtual_scanner.cpp
z_face_average/: count_id.py  mlp.py  process.py  process_npy.py  rm_othermode.py  test_face.py  test_face——copy.py
z_face_average/mlp_results/: splits.json
z_face_average/mlp_results_inference/: splits.json  summary_metrics.txt
(+209 files in other folders)
