[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "samesh"
version = "0.0.1"
description = "Segment Any Mesh"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "pandas",
]

# Install PyOpenGL==3.1.7 if pyrender errors

[project.optional-dependencies]

# Development dependencies
dev = []


[project.scripts]
[tool.setuptools.packages.find]
include = ["samesh*", "thridparty*"]
