[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "samesh"
version = "0.0.1"
description = "Segment Any Mesh"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    # 所有依赖已手动安装，无需通过pip自动安装
]

# 注：所有环境已安装完成，包括PyOpenGL和SAM2

[project.optional-dependencies]

# Development dependencies
dev = [
    # 开发依赖已手动安装
]

# 注：SAM2已安装

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["samesh*"]
